# scout-mini

./: .gitignore  README.md  flowchart.md  scout_mini.md  service_chart.md  slamdunk_scout_flow.md  하드웨어 구성.md
install/: local_setup.sh  setup.sh
install/depth_image_proc/lib/depth_image_proc/: disparity_node  (+9 more)
log/: latest_build
maps/: slamdunk.pgm  slamdunk.yaml
my_nav2_controller/: package.xml  setup.cfg  setup.py
scout_navigation2/launch/: navigation2.launch.py
scout_navigation2/maps/: slamdunk.pgm  slamdunk.yaml
src/: Flowchart_Architecture_Diagram.md
src/image_pipeline/image_pipeline/: package.xml
src/image_pipeline/stereo_image_proc/: package.xml
src/rfid_serial_node/: setup.cfg  setup.py
src/rfid_serial_node/rfid_serial_node/: rfid_reader.py
src/scout_mission_components/: package.xml  setup.cfg  setup.py
src/scout_mission_components/launch/: mission_components_launch.py
src/scout_mission_components/scout_mission_components/: amcl_reset.py  nav2_commander1.py  qr_detector.py  robot_rotator.py
src/scout_navigation2/: setup.cfg  setup.py
src/scout_navigation2/launch/: navigation2.launch.py
src/scout_robot/: README.md  logic.md  nav2_algorithm.md  nav2_params_fix.md  package.xml  rooms.yaml  setup.cfg  setup.py  theta_transition.md  topic.md
src/scout_robot/launch/: scout_main_launch.py
src/scout_robot/scout_robot/: amcl_reset_node.py  nav2_commander.py  robot_rotator_node.py  room_command_client.py
src/scout_robot_interfaces/: CMakeLists.txt  package.xml
src/scout_robot_interfaces/action/: NavigateRoom.action  RotateRobot.action
(+82 files in other folders)
